--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title> Yonglin Jing</title>
   </head>
   <body>
-    <h1>Hi, this is Gavin</h1>
+    <img src="gavin.jpg" alt="Gavin's Headshot" />
+    <h1>Hi, this is Yonglin Jing, AKA Gavin.</h1>
+    <p>Activly looking for stats related opportunities</p>
   </body>
 </html>
