Do some default

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
   <head>
     <title> Yonglin Jing</title>
+    <link rel ="stylesheet" href="styles.css"/>
   </head>
   <body>
-    <img src="gavin.jpg" alt="Gavin's Headshot" />
-    <h1>Hi, this is Yonglin Jing, AKA Gavin.</h1>
-    <p>Activly looking for stats related opportunities</p>
+    <section class="hero">
+      <header>
+        <img src="gavin.jpg" alt="Gavin's Headshot" />
+        <h1>Hi, this is Yonglin Jing, AKA Gavin.</h1>
+        <p>Activly looking for stats related opportunities</p>
+      </header>
+    </section>
   </body>
 </html>
