--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <header>
         <img src="gavin.jpg" alt="Gavin's Headshot" />
         <h1>Hi, this is Yonglin Jing, AKA Gavin.</h1>
-        <p>Activly looking for stats related opportunities</p>
+        <p>Actively looking for stats related opportunities</p>
       </header>
     </section>
   </body>
