few font change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <section class="hero">
       <header>
         <img src="gavin.jpg" alt="Gavin's Headshot" />
-        <h1>Hi, this is Yonglin Jing, AKA Gavin.</h1>
+        <h1>Hi, this is Yonglin<sub>AKA Gavin</sub> Jing</h1>
         <p>Actively looking for stats related opportunities</p>
       </header>
     </section>
