--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <header>
         <img src="gavin.jpg" alt="Gavin's Headshot" />
         <h1>Hi, this is Yonglin<sub>AKA Gavin</sub> Jing</h1>
-        <p>Actively looking for stats related opportunities</p>
+        <p>I like this world, please be kind to us.</p>
       </header>
     </section>
   </body>
