--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <section class="hero">
       <header>
-        <img src="zqgg.jpg" alt="Gavin's Headshot" />
+        <img src="gavin.jpg" alt="Gavin's Headshot" />
         <h1>Hi, this is Yonglin<sub>AKA Gavin</sub> Jing</h1>
         <p>I like this world, please be kind to us.</p>
       </header>
